syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "DelegateProto";
option java_multiple_files = true;

import "record_metadata_options.proto";

message DelegateRecord {
  required string delegate_name = 1;
  required string user_id = 2;
  required string storage_provider = 3;
  optional string provider_domain_name = 4;
  optional string agency_name = 5;
  repeated string storage_allowed_locations = 6;
  repeated string storage_blocked_locations = 7;
}

message DelegateRecordUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required DelegateRecord delegate = 1;
}