syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "MetaPrivilegePolicyHistoryProto";
option java_multiple_files = true;

import "record_metadata_options.proto";

message MetaPrivilegePolicyHistoryRecord {
  required string policy_id = 1;
  required int32 principal_type = 2;
  required int32 principal_source = 3;
  required string principal_id = 4;
  required int32 modify_type = 5;
  required int64 update_time = 6;
}

message MetaPrivilegePolicyHistoryRecordUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required MetaPrivilegePolicyHistoryRecord meta_privilege_policy_history = 1;
}