syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "TableIndexesHistoryProto";
option java_multiple_files = true;

import "record_metadata_options.proto";
import "common/table_index_info.proto";

// Stores the history index info created on the corresponding table
message TableIndexesHistory {
  required string event_id = 1;
  optional bytes version = 2;
  repeated TableIndexInfo table_index = 3;
}

message TableIndexesHistoryUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required TableIndexesHistory tableIndex = 1;
}