syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "TableStorageHistoryProto";
option java_multiple_files = true;

import "record_metadata_options.proto";
import "common/storage_info.proto";

//-----------------stored table-----------------------------
message TableStorageHistory {
  required string event_id = 1;
  optional bytes version = 2;
  required StorageInfo storage_info = 3;
}


message TableStorageHistoryUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required TableStorageHistory _tableStorageHistory = 1;
}
